--- a/static/scss/_inicio.scss
+++ b/static/scss/_inicio.scss
@@ -190,7 +190,7 @@
 // card image
 .v-mod-card-img img {
     width: 100%;
-    height: auto;
+    height: 12px;
     opacity: 0.9;
 }
 
